--- a/cyberimmunity--autonomous-car-m1.ipynb
+++ b/cyberimmunity--autonomous-car-m1.ipynb
@@ -143,11 +143,61 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting geopy==2.4.1 (from -r requirements.txt (line 1))\n",
+      "  Downloading geopy-2.4.1-py3-none-any.whl.metadata (6.8 kB)\n",
+      "Collecting paho-mqtt==1.5.0 (from -r requirements.txt (line 2))\n",
+      "  Downloading paho-mqtt-1.5.0.tar.gz (99 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Collecting pytest==8.3.4 (from -r requirements.txt (line 3))\n",
+      "  Downloading pytest-8.3.4-py3-none-any.whl.metadata (7.5 kB)\n",
+      "Collecting geographiclib<3,>=1.52 (from geopy==2.4.1->-r requirements.txt (line 1))\n",
+      "  Downloading geographiclib-2.0-py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: colorama in c:\\python\\lib\\site-packages (from pytest==8.3.4->-r requirements.txt (line 3)) (0.4.6)\n",
+      "Requirement already satisfied: exceptiongroup>=1.0.0rc8 in c:\\users\\русский\\appdata\\roaming\\python\\python310\\site-packages (from pytest==8.3.4->-r requirements.txt (line 3)) (1.2.2)\n",
+      "Collecting iniconfig (from pytest==8.3.4->-r requirements.txt (line 3))\n",
+      "  Downloading iniconfig-2.1.0-py3-none-any.whl.metadata (2.7 kB)\n",
+      "Requirement already satisfied: packaging in c:\\python\\lib\\site-packages (from pytest==8.3.4->-r requirements.txt (line 3)) (24.2)\n",
+      "Collecting pluggy<2,>=1.5 (from pytest==8.3.4->-r requirements.txt (line 3))\n",
+      "  Downloading pluggy-1.5.0-py3-none-any.whl.metadata (4.8 kB)\n",
+      "Collecting tomli>=1 (from pytest==8.3.4->-r requirements.txt (line 3))\n",
+      "  Downloading tomli-2.2.1-py3-none-any.whl.metadata (10 kB)\n",
+      "Downloading geopy-2.4.1-py3-none-any.whl (125 kB)\n",
+      "Downloading pytest-8.3.4-py3-none-any.whl (343 kB)\n",
+      "Downloading geographiclib-2.0-py3-none-any.whl (40 kB)\n",
+      "Downloading pluggy-1.5.0-py3-none-any.whl (20 kB)\n",
+      "Downloading tomli-2.2.1-py3-none-any.whl (14 kB)\n",
+      "Downloading iniconfig-2.1.0-py3-none-any.whl (6.0 kB)\n",
+      "Building wheels for collected packages: paho-mqtt\n",
+      "  Building wheel for paho-mqtt (setup.py): started\n",
+      "  Building wheel for paho-mqtt (setup.py): finished with status 'done'\n",
+      "  Created wheel for paho-mqtt: filename=paho_mqtt-1.5.0-py3-none-any.whl size=64935 sha256=df80a2247e2e5d86a056e9b8d2e76b95f478c2ab35a36c3e04c30b61accb93ac\n",
+      "  Stored in directory: c:\\users\\русский\\appdata\\local\\pip\\cache\\wheels\\a9\\84\\b6\\c6f300f6c9b8d90655d5c7fcd2ac0e0ebcfffd9d9030efd034\n",
+      "Successfully built paho-mqtt\n",
+      "Installing collected packages: paho-mqtt, tomli, pluggy, iniconfig, geographiclib, pytest, geopy\n",
+      "Successfully installed geographiclib-2.0 geopy-2.4.1 iniconfig-2.1.0 paho-mqtt-1.5.0 pluggy-1.5.0 pytest-8.3.4 tomli-2.2.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.3.1 -> 25.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "# раскомментируйте строчку ниже и запустите ячейку на выполнение\n",
     "\n",
-    "#%pip install -r requirements.txt\n",
+    "%pip install -r requirements.txt\n",
     "\n",
     "# при наличии ошибок установите пакеты из файла requirements.txt другим подходящим способом - \n",
     "# например, как системные пакеты"
@@ -411,11 +461,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# вставьте свой код в эту ячейку"
+    "# вставьте свой код в эту ячейку\n",
+    "from multiprocessing import Queue\n",
+    "from src.communication_gateway import BaseCommunicationGateway\n",
+    "from src.config import CONTROL_SYSTEM_QUEUE_NAME\n",
+    "from src.event_types import Event\n",
+    "\n",
+    "class CommunicationGateway(BaseCommunicationGateway):\n",
+    "    \"\"\"CommunicationGateway класс для реализации логики взаимодействия\n",
+    "    с системой планирования заданий\n",
+    "\n",
+    "    Работает в отдельном процессе, поэтому создаётся как наследник класса Process\n",
+    "    \"\"\"\n",
+    "    def _send_mission_to_consumers(self):\n",
+    "        \"\"\" метод для отправки сообщения с маршрутным заданием в систему управления \"\"\"\n",
+    "        \n",
+    "        # имена очередей блоков находятся в файле src/config.py\n",
+    "        # события нужно отправлять в соответствие с диаграммой информационных потоков\n",
+    "        control_q_name = CONTROL_SYSTEM_QUEUE_NAME\n",
+    "\n",
+    "        # события передаются в виде экземпляров класса Event, \n",
+    "        # описание класса находится в файле src/event_types.py\n",
+    "        event = Event(source=BaseCommunicationGateway.event_source_name,\n",
+    "                      destination=control_q_name,\n",
+    "                      operation=\"set_mission\", parameters=self._mission\n",
+    "                      )\n",
+    "\n",
+    "        # поиск в каталоге нужной очереди (в данном случае - системы управления)\n",
+    "        control_q: Queue = self._queues_dir.get_queue(control_q_name)\n",
+    "        # отправка события в найденную очередь\n",
+    "        control_q.put(event)"
    ]
   },
   {
@@ -427,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -454,12 +533,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# найдите подходящее имя очереди в файле src/config.py и добавьте в строчку ниже\n",
     "#from src.config import \n",
+    "from src.config import SERVOS_QUEUE_NAME\n",
     "from src.control_system import BaseControlSystem\n",
     "\n",
     "\n",
@@ -467,15 +547,25 @@
     "    \"\"\"ControlSystem блок расчёта управления \"\"\"\n",
     "\n",
     "    def _send_speed_and_direction_to_consumers(self, speed, direction):\n",
-    "        servos_q_name = None # замените на правильное название очереди\n",
+    "        servos_q_name = SERVOS_QUEUE_NAME # замените на правильное название очереди\n",
     "        servos_q: Queue = self._queues_dir.get_queue(servos_q_name)\n",
     "\n",
     "        # отправка сообщения с желаемой скоростью\n",
-    "        event_speed = None # замените на код создания сообщения со скоростью для приводов\n",
+    "        event_speed = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=SERVOS_QUEUE_NAME,\n",
+    "            operation=\"set_speed\",\n",
+    "            parameters=speed\n",
+    "        ) # замените на код создания сообщения со скоростью для приводов\n",
     "                           # подсказка, требуемая операция - set_speed\n",
     "\n",
     "        # отправка сообщения с желаемым направлением\n",
-    "        event_direction = None # замените на код создания сообщения с направлением для приводов\n",
+    "        event_direction = event_speed = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=SERVOS_QUEUE_NAME,\n",
+    "            operation=\"set_direction\",\n",
+    "            parameters=direction\n",
+    "        ) # замените на код создания сообщения с направлением для приводов\n",
     "                               # подсказка, требуемая операция - set_direction\n",
     "\n",
     "        servos_q.put(event_speed)\n",
@@ -484,20 +574,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# найдите подходящее имя очереди в файле src/config.py и добавьте в строчку ниже\n",
     "#from src.config import \n",
+    "from src.config import CONTROL_SYSTEM_QUEUE_NAME\n",
     "from src.navigation_system import BaseNavigationSystem\n",
     "\n",
     "\n",
     "class NavigationSystem(BaseNavigationSystem):\n",
     "    \"\"\" класс навигационного блока \"\"\"\n",
     "    def _send_position_to_consumers(self):        \n",
-    "        control_q_name = None # замените на правильное название очереди\n",
-    "        event = None # замените на код создания сообщения с координатами для системы управления \n",
+    "        control_q_name = CONTROL_SYSTEM_QUEUE_NAME # замените на правильное название очереди\n",
+    "        event = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=CONTROL_SYSTEM_QUEUE_NAME,\n",
+    "            operation=\"position_update\",\n",
+    "            parameters=self._position\n",
+    "        ) # замените на код создания сообщения с координатами для системы управления \n",
     "                     # подсказка, требуемая операция - position_update\n",
     "        control_q: Queue = self._queues_dir.get_queue(control_q_name)\n",
     "        control_q.put(event)"
@@ -505,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -668,19 +764,7 @@
       "[ИНФО][QUEUES] регистрируем очередь navigation\n",
       "[ИНФО][NAVIGATION] создан компонент навигации\n",
       "[ИНФО][QUEUES] регистрируем очередь servos\n",
-      "[ИНФО][SERVOS] создан компонент сервоприводов\n",
-      "[ИНФО][SITL] [SITL] старт симуляции\n",
-      "[ИНФО][NAVIGATION] старт навигации\n",
-      "[ИНФО][SERVOS] старт блока приводов\n",
-      "[ИНФО][COMMUNICATION] старт системы планирования заданий\n",
-      "[ИНФО][CONTROL] старт системы управления\n",
-      "[ИНФО][MISSION PLANNER] старт системы планирования заданий\n",
-      "[ИНФО][MISSION PLANNER] запрошена новая задача, отправляем получателям\n",
-      "[ИНФО][MISSION PLANNER] новая задача отправлена в коммуникационный шлюз\n",
-      "[ИНФО][COMMUNICATION] получен новый маршрут, отправляем в получателям\n",
-      "[ИНФО][CONTROL] установлена новая задача, начинаем следовать по маршруту, текущее время 10:21:35.926808\n",
-      "[ИНФО][CONTROL] новая скорость 30 (была 0)\n",
-      "[ИНФО][CONTROL] новое направление 227 (было 0)\n"
+      "[ИНФО][SERVOS] создан компонент сервоприводов\n"
      ]
     }
    ],
@@ -750,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,11 +850,21 @@
     "\n",
     "        # инициализация сообщения с желаемой скоростью\n",
     "        # подсказка: блок Приводы ожидает команду \"set_speed\" с параметром в виде скорости\n",
-    "        event_speed = None # <-- измените эту строку!\n",
+    "        event_speed = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=servos_q_name,\n",
+    "            operation=\"set_speed\",\n",
+    "            parameters=speed\n",
+    "        ) # <-- измените эту строку!\n",
     "\n",
     "        # отправка сообщения с желаемым направлением\n",
     "        # подсказка: блок Приводы ожидает команду \"set_direction\" с параметром в виде направления\n",
-    "        event_direction = None # <-- измените эту строку!\n",
+    "        event_direction = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=servos_q_name,\n",
+    "            operation=\"set_direction\",\n",
+    "            parameters=direction\n",
+    "        ) # <-- измените эту строку!\n",
     "\n",
     "        servos_q.put(event_speed)\n",
     "        servos_q.put(event_direction)\n",
@@ -780,7 +874,12 @@
     "        cargo_q = self._queues_dir.get_queue(CARGO_BAY_QUEUE_NAME)\n",
     "        # инициализация сообщения с командой на блокировку грузового отсека\n",
     "        # подсказка: блок CargoBay ожидает команду \"lock_cargo\" без параметров\n",
-    "        event = None # <-- измените эту строку!\n",
+    "        event = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=CARGO_BAY_QUEUE_NAME,\n",
+    "            operation=\"lock_cargo\",\n",
+    "            parameters=None\n",
+    "        ) # <-- измените эту строку!\n",
     "        cargo_q.put(event)\n",
     "\n",
     "    def _release_cargo(self):\n",
@@ -788,18 +887,24 @@
     "        cargo_q = self._queues_dir.get_queue(CARGO_BAY_QUEUE_NAME)\n",
     "        # инициализация сообщения с командой на блокировку грузового отсека\n",
     "        # подсказка: блок CargoBay ожидает команду \"release_cargo\" без параметров\n",
-    "        event = None # <-- измените эту строку!\n",
+    "        event = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=CARGO_BAY_QUEUE_NAME,\n",
+    "            operation=\"release_cargo\",\n",
+    "            parameters=None\n",
+    "        ) # <-- измените эту строку!\n",
     "\n",
     "        cargo_q.put(event)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# пример решения удалить перед выдачей конкурсантам!\n",
+    "# Примечание Славика Жернильского: Спасибо что не удалили :3\n",
     "\n",
     "from src.config import CARGO_BAY_QUEUE_NAME,\\\n",
     "    SERVOS_QUEUE_NAME\n",
@@ -858,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -879,31 +984,7 @@
       "[ИНФО][NAVIGATION] создан компонент навигации\n",
       "[ИНФО][QUEUES] регистрируем очередь servos\n",
       "[ИНФО][QUEUES] регистрируем очередь cargo\n",
-      "[ИНФО][CARGO] создан компонент грузового отсека, отсек заблокирован\n",
-      "[ИНФО][MISSION_PLANNER.MQTT] старт клиента телеметрии\n",
-      "[ИНФО][MISSION_PLANNER.MQTT] клиент отправки маршрута создан и запущен[ИНФО][SITL.MQTT] старт клиента телеметрии\n",
-      "\n",
-      "\n",
-      "[ИНФО][SITL.MQTT] клиент отправки телеметрии создан и запущен\n",
-      "[ИНФО][SITL] [SITL] старт симуляции[ИНФО][CARGO] старт блока грузового отсека\n",
-      "[ИНФО][COMMUNICATION] старт системы планирования заданий\n",
-      "[ИНФО][CONTROL] старт системы управления\n",
-      "[ИНФО][MISSION PLANNER] старт системы планирования заданий\n",
-      "[ИНФО][NAVIGATION] старт навигации\n",
-      "[ИНФО][MISSION PLANNER] запрошена новая задача, отправляем получателям\n",
-      "[ИНФО][MISSION PLANNER] новая задача отправлена в коммуникационный шлюз\n",
-      "[ИНФО][COMMUNICATION] получен новый маршрут, отправляем в получателям\n",
-      "[ИНФО][CONTROL] установлена новая задача, начинаем следовать по маршруту, текущее время 10:21:41.571833\n",
-      "[ИНФО][CARGO] заблокировать грузовой отсек\n",
-      "[ИНФО][CARGO] грузовой отсек заблокирован\n",
-      "[ИНФО][MISSION_PLANNER.MQTT] отправлен маршрут: {\"id\": \"m1\", \"mission_str\": \"QGC WPL 110\\n0\\t1\\t0\\t16\\t0\\t5\\t0\\t0\\t59.9386\\t30.3121\\t0\\t1\\n0\\t0\\t3\\t16\\t0\\t5\\t0\\t0\\t59.9386\\t30.3121\\t0\\t1\\n1\\t0\\t3\\t16\\t0\\t5\\t0\\t0\\t59.9421\\t30.3067\\t0\\t1\\n\"}\n",
-      "[ИНФО][CONTROL] новая скорость 60 (была 0)\n",
-      "[ИНФО][CONTROL] новое направление 322 (было 0)\n",
-      "[ИНФО][CONTROL] маршрут пройден, текущее время 10:22:12.691072\n",
-      "[ИНФО][CONTROL] новая скорость 0.0 (была 60)\n",
-      "[ИНФО][CONTROL] новое направление 0 (было 322)\n",
-      "[ИНФО][CARGO] выгрузка\n",
-      "[ИНФО][CARGO] груз оставлен\n"
+      "[ИНФО][CARGO] создан компонент грузового отсека, отсек заблокирован\n"
      ]
     }
    ],
@@ -1021,7 +1102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
