--- a/cyberimmunity--autonomous-car-m2.ipynb
+++ b/cyberimmunity--autonomous-car-m2.ipynb
@@ -39,7 +39,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ваш код"
+    "# вставьте свой код в эту ячейку\n",
+    "from multiprocessing import Queue\n",
+    "from src.communication_gateway import BaseCommunicationGateway\n",
+    "from src.config import CONTROL_SYSTEM_QUEUE_NAME\n",
+    "from src.event_types import Event\n",
+    "from src.control_system import BaseControlSystem\n",
+    "from src.navigation_system import BaseNavigationSystem\n",
+    "\n",
+    "class CommunicationGateway(BaseCommunicationGateway):\n",
+    "    \"\"\"CommunicationGateway класс для реализации логики взаимодействия\n",
+    "    с системой планирования заданий\n",
+    "\n",
+    "    Работает в отдельном процессе, поэтому создаётся как наследник класса Process\n",
+    "    \"\"\"\n",
+    "    def _send_mission_to_consumers(self):\n",
+    "        \"\"\" метод для отправки сообщения с маршрутным заданием в систему управления \"\"\"\n",
+    "        \n",
+    "        # имена очередей блоков находятся в файле src/config.py\n",
+    "        # события нужно отправлять в соответствие с диаграммой информационных потоков\n",
+    "        control_q_name = CONTROL_SYSTEM_QUEUE_NAME\n",
+    "\n",
+    "        # события передаются в виде экземпляров класса Event, \n",
+    "        # описание класса находится в файле src/event_types.py\n",
+    "        event = Event(source=BaseCommunicationGateway.event_source_name,\n",
+    "                      destination=control_q_name,\n",
+    "                      operation=\"set_mission\", parameters=self._mission\n",
+    "                      )\n",
+    "\n",
+    "        # поиск в каталоге нужной очереди (в данном случае - системы управления)\n",
+    "        control_q: Queue = self._queues_dir.get_queue(control_q_name)\n",
+    "        # отправка события в найденную очередь\n",
+    "        control_q.put(event)\n",
+    "class ControlSystem(BaseControlSystem):\n",
+    "    \"\"\"ControlSystem блок расчёта управления \"\"\"\n",
+    "\n",
+    "    def _send_speed_and_direction_to_consumers(self, speed, direction):\n",
+    "        servos_q_name = SERVOS_QUEUE_NAME # замените на правильное название очереди\n",
+    "        servos_q: Queue = self._queues_dir.get_queue(servos_q_name)\n",
+    "\n",
+    "        # отправка сообщения с желаемой скоростью\n",
+    "        event_speed = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=SERVOS_QUEUE_NAME,\n",
+    "            operation=\"set_speed\",\n",
+    "            parameters=speed\n",
+    "        ) # замените на код создания сообщения со скоростью для приводов\n",
+    "                           # подсказка, требуемая операция - set_speed\n",
+    "\n",
+    "        # отправка сообщения с желаемым направлением\n",
+    "        event_direction = event_speed = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=SERVOS_QUEUE_NAME,\n",
+    "            operation=\"set_direction\",\n",
+    "            parameters=direction\n",
+    "        ) # замените на код создания сообщения с направлением для приводов\n",
+    "                               # подсказка, требуемая операция - set_direction\n",
+    "\n",
+    "        servos_q.put(event_speed)\n",
+    "        servos_q.put(event_direction)  \n",
+    "class NavigationSystem(BaseNavigationSystem):\n",
+    "    \"\"\" класс навигационного блока \"\"\"\n",
+    "    def _send_position_to_consumers(self):        \n",
+    "        control_q_name = CONTROL_SYSTEM_QUEUE_NAME # замените на правильное название очереди\n",
+    "        event = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=CONTROL_SYSTEM_QUEUE_NAME,\n",
+    "            operation=\"position_update\",\n",
+    "            parameters=self._position\n",
+    "        ) # замените на код создания сообщения с координатами для системы управления \n",
+    "                     # подсказка, требуемая операция - position_update\n",
+    "        control_q: Queue = self._queues_dir.get_queue(control_q_name)\n",
+    "        control_q.put(event)     "
    ]
   },
   {
@@ -102,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,12 +215,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# создадим wpl файл и запишем туда маршрутное задание\n",
-    "wpl_file = \"module2.wpl\""
+    "wpl_file = \"primer.wpl\""
    ]
   },
   {
@@ -162,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +270,7 @@
     "\n",
     "from src.mission_type import GeoSpecificSpeedLimit\n",
     "speed_limits = [\n",
-    "    GeoSpecificSpeedLimit(0, 30),\n",
+    "    GeoSpecificSpeedLimit(0, 20),\n",
     "    GeoSpecificSpeedLimit(1, 60),\n",
     "    GeoSpecificSpeedLimit(5, 20),\n",
     "]\n",
@@ -238,53 +309,7 @@
       "[ИНФО][QUEUES] регистрируем очередь navigation\n",
       "[ИНФО][QUEUES] регистрируем очередь servos\n",
       "[ИНФО][QUEUES] регистрируем очередь cargo\n",
-      "[ИНФО][CARGO] создан компонент грузового отсека, отсек заблокирован\n",
-      "[ИНФО][CARGO] старт блока грузового отсека\n",
-      "[ИНФО][CONTROL] старт системы управления\n",
-      "[ИНФО][MISSION PLANNER] старт системы планирования заданий\n",
-      "[ИНФО][MISSION PLANNER] запрошена новая задача, отправляем получателям\n",
-      "[ИНФО][MISSION PLANNER] новая задача отправлена в коммуникационный шлюз\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ИНФО][CONTROL] установлена новая задача, начинаем следовать по маршруту, текущее время 10:23:40.127052\n",
-      "[ИНФО][CARGO] заблокировать грузовой отсек\n",
-      "[ИНФО][CARGO] грузовой отсек заблокирован\n",
-      "[ИНФО][CONTROL] новая скорость 30 (была 0)\n",
-      "[ИНФО][CONTROL] новое направление 254 (было 0)\n",
-      "[ИНФО][CONTROL] сегмент пройден\n",
-      "[ИНФО][CONTROL] новая скорость 60 (была 30)\n",
-      "[ИНФО][CONTROL] новое направление 322 (было 254)\n",
-      "[ИНФО][CONTROL] сегмент пройден\n",
-      "[ИНФО][CONTROL] новое направление 233 (было 322)\n",
-      "[ИНФО][CONTROL] новое направление 230 (было 233)\n",
-      "[ИНФО][CONTROL] новое направление 228 (было 230)\n",
-      "[ИНФО][CONTROL] новое направление 227 (было 228)\n",
-      "[ИНФО][CONTROL] новое направление 228 (было 227)\n",
-      "[ИНФО][CONTROL] сегмент пройден\n",
-      "[ИНФО][CONTROL] новое направление 231 (было 228)\n",
-      "[ИНФО][CONTROL] новое направление 232 (было 231)\n",
-      "[ИНФО][CONTROL] сегмент пройден\n",
-      "[ИНФО][CONTROL] новое направление 327 (было 232)\n",
-      "[ИНФО][CONTROL] новое направление 331 (было 327)\n",
-      "[ИНФО][CONTROL] новое направление 336 (было 331)\n",
-      "[ИНФО][CONTROL] новое направление 337 (было 336)\n",
-      "[ИНФО][CONTROL] сегмент пройден\n",
-      "[ИНФО][CONTROL] новая скорость 20 (была 60)\n",
-      "[ИНФО][CONTROL] новое направление 237 (было 337)\n",
-      "[ИНФО][CONTROL] новое направление 221 (было 237)\n",
-      "[ИНФО][CONTROL] новое направление 209 (было 221)\n",
-      "[ИНФО][CONTROL] новое направление 206 (было 209)\n",
-      "[ИНФО][CONTROL] новое направление 205 (было 206)\n",
-      "[ИНФО][CONTROL] новое направление 204 (было 205)\n",
-      "[ИНФО][CONTROL] маршрут пройден, текущее время 10:25:12.753377\n",
-      "[ИНФО][CONTROL] новая скорость 0.0 (была 20)\n",
-      "[ИНФО][CONTROL] новое направление 0 (было 204)\n",
-      "[ИНФО][CARGO] выгрузка\n",
-      "[ИНФО][CARGO] груз оставлен\n"
+      "[ИНФО][CARGO] создан компонент грузового отсека, отсек заблокирован\n"
      ]
     }
    ],
@@ -366,7 +391,7 @@
     "# в случае превышения времени выполнения ячейки на более чем 10 секунд от заданного, \n",
     "# допустимо перезапустить вычислительное ядро и повторно выполнить весь блокнот, штрафные очки за это не начисляются\n",
     "# при условии, что повторный запуск закончился успешно\n",
-    "sleep(100)\n",
+    "sleep(80)\n",
     "\n",
     "# останавливаем все компоненты\n",
     "system_components.stop()\n",
@@ -416,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
