--- a/cyberimmunity--autonomous-car-m2.ipynb
+++ b/cyberimmunity--autonomous-car-m2.ipynb
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "# вставьте свой код в эту ячейку\n",
     "from multiprocessing import Queue\n",
     "from src.communication_gateway import BaseCommunicationGateway\n",
-    "from src.config import CONTROL_SYSTEM_QUEUE_NAME\n",
+    "from src.config import CONTROL_SYSTEM_QUEUE_NAME, SERVOS_QUEUE_NAME, CARGO_BAY_QUEUE_NAME\n",
     "from src.event_types import Event\n",
     "from src.control_system import BaseControlSystem\n",
     "from src.navigation_system import BaseNavigationSystem\n",
@@ -88,7 +88,7 @@
     "                           # подсказка, требуемая операция - set_speed\n",
     "\n",
     "        # отправка сообщения с желаемым направлением\n",
-    "        event_direction = event_speed = Event(\n",
+    "        event_direction = Event(\n",
     "            source=self.event_source_name,\n",
     "            destination=SERVOS_QUEUE_NAME,\n",
     "            operation=\"set_direction\",\n",
@@ -98,6 +98,7 @@
     "\n",
     "        servos_q.put(event_speed)\n",
     "        servos_q.put(event_direction)  \n",
+    "\n",
     "class NavigationSystem(BaseNavigationSystem):\n",
     "    \"\"\" класс навигационного блока \"\"\"\n",
     "    def _send_position_to_consumers(self):        \n",
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,19 +174,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "wpl_file_content =  \"\"\"QGC WPL 110\n",
-    "0\t1\t0\t16\t0\t5\t0\t0\t59.9391061791295741\t30.3156781196594238\t0\t1\n",
-    "1\t0\t3\t16\t0\t5\t0\t0\t59.938515001968419\t30.312201976776123\t0\t1\n",
-    "2\t0\t3\t16\t0\t5\t0\t0\t59.9421371401196978\t30.3066229820251465\t0\t1\n",
-    "3\t0\t3\t16\t0\t5\t0\t0\t59.9410946067827126\t30.3039407730102539\t0\t1\n",
-    "4\t0\t3\t16\t0\t5\t0\t0\t59.9403744872963955\t30.302116870880127\t0\t1\n",
-    "5\t0\t3\t16\t0\t5\t0\t0\t59.9412316426749499\t30.3011056780815125\t0\t1\n",
-    "6\t0\t3\t16\t0\t5\t0\t0\t59.9411147591553188\t30.3006818890571594\t0\t1\n",
-    "\"\"\"\n"
+    "wpl_file_content = \"\"\"QGC WPL 110\n",
+    "0   1   3   16   0  5   0   0   59.88151810540939  29.830156347867295 0   1\n",
+    "1   0   3   16   0  5   0   0   59.88189595544521  29.828357378202076 0   1\n",
+    "2   0   3   16   0  5   0   0   59.88182695544521  29.828052378202076 0   1\n",
+    "3   0   3   16   0  5   0   0   59.88192495544521  29.827439378202076 0   1\n",
+    "4   0   3   16   0  5   0   0   59.88111210540939  29.826849347867295 0   1\n",
+    "5   0   3   16   0  5   0   0   59.878027400845845 29.82401720196725  0   1\n",
+    "6   0   0   16   0  5   0   0   59.87664497445017  29.830429915603762 0   1\n",
+    "7   0   0   16   0  5   0   0   59.87634313737615  29.830001068799085 0   1\n",
+    "\"\"\"\n",
+    "\n"
    ]
   },
   {
@@ -215,12 +218,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "# создадим wpl файл и запишем туда маршрутное задание\n",
-    "wpl_file = \"primer.wpl\""
+    "wpl_file = \"module2.wpl\""
    ]
   },
   {
@@ -233,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,14 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Point(59.939106179129574, 30.315678119659424, 0.0), Point(59.93851500196842, 30.312201976776123, 0.0), Point(59.9421371401197, 30.306622982025146, 0.0), Point(59.94109460678271, 30.303940773010254, 0.0), Point(59.940374487296396, 30.302116870880127, 0.0), Point(59.94123164267495, 30.301105678081512, 0.0), Point(59.94111475915532, 30.30068188905716, 0.0)]\n"
+      "[Point(59.88151810540939, 29.830156347867295, 0.0), Point(59.88189595544521, 29.828357378202075, 0.0), Point(59.88182695544521, 29.828052378202077, 0.0), Point(59.88192495544521, 29.827439378202076, 0.0), Point(59.88111210540939, 29.826849347867295, 0.0), Point(59.878027400845845, 29.82401720196725, 0.0), Point(59.87664497445017, 29.830429915603762, 0.0), Point(59.87634313737615, 29.830001068799085, 0.0)]\n"
      ]
     }
    ],
@@ -271,8 +274,12 @@
     "from src.mission_type import GeoSpecificSpeedLimit\n",
     "speed_limits = [\n",
     "    GeoSpecificSpeedLimit(0, 20),\n",
-    "    GeoSpecificSpeedLimit(1, 60),\n",
-    "    GeoSpecificSpeedLimit(5, 20),\n",
+    "    GeoSpecificSpeedLimit(1, 20),\n",
+    "    GeoSpecificSpeedLimit(2, 20),\n",
+    "    GeoSpecificSpeedLimit(3, 60),\n",
+    "    GeoSpecificSpeedLimit(4, 60),\n",
+    "    GeoSpecificSpeedLimit(5, 60),\n",
+    "    GeoSpecificSpeedLimit(6, 20),\n",
     "]\n",
     "\n",
     "from src.mission_planner import Mission\n",
@@ -290,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +337,7 @@
     "\n",
     "\n",
     "# координата текущего положения машинки\n",
-    "home = GeoPoint(latitude=59.939032, longitude=30.315827) \n",
+    "home = GeoPoint(latitude=59.88151810540939, longitude=29.830156347867295) \n",
     "\n",
     "\n",
     "# каталог очередей для передачи сообщений между блоками\n",
