--- a/cyberimmunity--autonomous-car-m3.ipynb
+++ b/cyberimmunity--autonomous-car-m3.ipynb
@@ -97,11 +97,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# вставьте сюда ваш код\n",
-    "# вставьте свой код в эту ячейку\n",
     "from multiprocessing import Queue\n",
     "from src.communication_gateway import BaseCommunicationGateway\n",
-    "from src.config import CONTROL_SYSTEM_QUEUE_NAME\n",
+    "from src.config import CONTROL_SYSTEM_QUEUE_NAME, SERVOS_QUEUE_NAME, CARGO_BAY_QUEUE_NAME\n",
     "from src.event_types import Event\n",
     "from src.control_system import BaseControlSystem\n",
     "from src.navigation_system import BaseNavigationSystem\n",
@@ -147,7 +145,7 @@
     "                           # подсказка, требуемая операция - set_speed\n",
     "\n",
     "        # отправка сообщения с желаемым направлением\n",
-    "        event_direction = event_speed = Event(\n",
+    "        event_direction = Event(\n",
     "            source=self.event_source_name,\n",
     "            destination=SERVOS_QUEUE_NAME,\n",
     "            operation=\"set_direction\",\n",
@@ -157,6 +155,7 @@
     "\n",
     "        servos_q.put(event_speed)\n",
     "        servos_q.put(event_direction)  \n",
+    "\n",
     "class NavigationSystem(BaseNavigationSystem):\n",
     "    \"\"\" класс навигационного блока \"\"\"\n",
     "    def _send_position_to_consumers(self):        \n",
@@ -181,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Point(59.939106179129574, 30.315678119659424, 0.0), Point(59.93851500196842, 30.312201976776123, 0.0), Point(59.9421371401197, 30.306622982025146, 0.0), Point(59.94109460678271, 30.303940773010254, 0.0), Point(59.940374487296396, 30.302116870880127, 0.0), Point(59.94123164267495, 30.301105678081512, 0.0), Point(59.94111475915532, 30.30068188905716, 0.0)]\n",
+      "[Point(59.88151810540939, 29.830156347867295, 0.0), Point(59.88189595544521, 29.828357378202075, 0.0), Point(59.88182695544521, 29.828052378202077, 0.0), Point(59.88192495544521, 29.827439378202076, 0.0), Point(59.88111210540939, 29.826849347867295, 0.0), Point(59.878027400845845, 29.82401720196725, 0.0), Point(59.87664497445017, 29.830429915603762, 0.0), Point(59.87634313737615, 29.830001068799085, 0.0)]\n",
       "[ИНФО][QUEUES] создан каталог очередей\n",
       "[ИНФО][QUEUES] регистрируем очередь planner.mqtt\n",
       "[ИНФО][QUEUES] регистрируем очередь sitl.mqtt\n",
@@ -250,7 +249,7 @@
     "\n",
     "\n",
     "# возьмём маршрут из модуля 2\n",
-    "wpl_file = \"primer.wpl\"\n",
+    "wpl_file = \"module3.wpl\"\n",
     "\n",
     "parser = WPLParser(wpl_file)    \n",
     "points = parser.parse()\n",
@@ -259,8 +258,12 @@
     "from src.mission_type import GeoSpecificSpeedLimit\n",
     "speed_limits = [\n",
     "    GeoSpecificSpeedLimit(0, 20),\n",
-    "    GeoSpecificSpeedLimit(1, 60),\n",
-    "    GeoSpecificSpeedLimit(5, 20),\n",
+    "    GeoSpecificSpeedLimit(1, 20),\n",
+    "    GeoSpecificSpeedLimit(2, 20),\n",
+    "    GeoSpecificSpeedLimit(3, 60),\n",
+    "    GeoSpecificSpeedLimit(4, 60),\n",
+    "    GeoSpecificSpeedLimit(5, 60),\n",
+    "    GeoSpecificSpeedLimit(6, 20),\n",
     "]\n",
     "\n",
     "\n",
@@ -468,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +783,7 @@
       "[ИНФО][QUEUES] регистрируем очередь control\n",
       "[ИНФО][QUEUES] регистрируем очередь navigation\n",
       "[ИНФО][QUEUES] регистрируем очередь communication\n",
-      "[Point(59.939106179129574, 30.315678119659424, 0.0), Point(59.93851500196842, 30.312201976776123, 0.0), Point(59.9421371401197, 30.306622982025146, 0.0), Point(59.94109460678271, 30.303940773010254, 0.0), Point(59.940374487296396, 30.302116870880127, 0.0), Point(59.94123164267495, 30.301105678081512, 0.0), Point(59.94111475915532, 30.30068188905716, 0.0)]\n",
+      "[Point(59.88151810540939, 29.830156347867295, 0.0), Point(59.88189595544521, 29.828357378202075, 0.0), Point(59.88182695544521, 29.828052378202077, 0.0), Point(59.88192495544521, 29.827439378202076, 0.0), Point(59.88111210540939, 29.826849347867295, 0.0), Point(59.878027400845845, 29.82401720196725, 0.0), Point(59.87664497445017, 29.830429915603762, 0.0), Point(59.87634313737615, 29.830001068799085, 0.0)]\n",
       "[ИНФО][QUEUES] создан каталог очередей\n",
       "[ИНФО][QUEUES] регистрируем очередь planner.mqtt\n",
       "[ИНФО][QUEUES] регистрируем очередь sitl.mqtt\n",
@@ -1020,7 +1023,7 @@
     "\n",
     "\n",
     "# возьмём маршрут из модуля 2\n",
-    "wpl_file = \"primer.wpl\"\n",
+    "wpl_file = \"module3.wpl\"\n",
     "\n",
     "parser = WPLParser(wpl_file)    \n",
     "points = parser.parse()\n",
@@ -1029,8 +1032,12 @@
     "from src.mission_type import GeoSpecificSpeedLimit\n",
     "speed_limits = [\n",
     "    GeoSpecificSpeedLimit(0, 20),\n",
-    "    GeoSpecificSpeedLimit(1, 60),\n",
-    "    GeoSpecificSpeedLimit(5, 20),\n",
+    "    GeoSpecificSpeedLimit(1, 20),\n",
+    "    GeoSpecificSpeedLimit(2, 20),\n",
+    "    GeoSpecificSpeedLimit(3, 60),\n",
+    "    GeoSpecificSpeedLimit(4, 60),\n",
+    "    GeoSpecificSpeedLimit(5, 60),\n",
+    "    GeoSpecificSpeedLimit(6, 20),\n",
     "]\n",
     "\n",
     "\n",
